# ProjectDiamond

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
audio/: audioMetadata.xml
config/: engineConfig.xml
include/behaviour/: CharacterController2DBehaviour.h
include/builder/: CharacterController2DBehaviourBuilder.h
include/component/: BoxCharacter2D.h  Character2D.h  CollisionState2D.h  DeathBlock.h  DuckCharacter.h  JumpResetBox.h  LevelDoor.h  MovementState2D.h  ScrollingBackground.h
include/config/: BoxCharacter2DConfig.h  Character2DConfig.h  CharacterController2DBehaviourConfig.h  DeathBlockConfig.h  DuckCharacterConfig.h  JumpConfig.h  JumpResetBoxConfig.h  LevelDoorConfig.h  MoveConfig.h  ScrollingBackgroundConfig.h
include/editor/: EditorCentralWidget.h  EditorGameWindow.h  LevelConfigListModel.h  LevelConfigWidget.h
include/parser/: BoxCharacter2DConfigParser.h  Character2DConfigParser.h  CharacterController2DBehaviourConfigParser.h  DeathBlockConfigParser.h  DuckCharacterConfigParser.h  JumpResetBoxConfigParser.h  LevelDoorConfigParser.h  ScrollingBackgroundConfigParser.h
scenes/: 0.xml  1.xml  2.xml  characterController2DDemoScene.xml  collider2DTestScene.xml  testScene.xml  textureTestScene.xml
spriteSheets/: spriteSheetMetadata.xml
src/: ProjectDiamond.cpp
src/behaviour/: CharacterController2DBehaviour.cpp
src/builder/: CharacterController2DBehaviourBuilder.cpp
src/component/: BoxCharacter2D.cpp  Character2D.cpp  DeathBlock.cpp  DuckCharacter.cpp  JumpResetBox.cpp  LevelDoor.cpp  ScrollingBackground.cpp
src/config/: BoxCharacter2DConfig.cpp  Character2DConfig.cpp  CharacterController2DBehaviourConfig.cpp  DeathBlockConfig.cpp  DuckCharacterConfig.cpp  JumpResetBoxConfig.cpp  LevelDoorConfig.cpp  ScrollingBackgroundConfig.cpp
src/editor/: EditorCentralWidget.cpp  EditorCentralWidget.ui  EditorGameWindow.cpp  LevelConfigListModel.cpp  LevelConfigWidget.cpp  LevelConfigWidget.ui
src/parser/: BoxCharacter2DConfigParser.cpp  Character2DConfigParser.cpp  CharacterController2DBehaviourConfigParser.cpp  DeathBlockConfigParser.cpp  DuckCharacterConfigParser.cpp  JumpResetBoxConfigParser.cpp  LevelDoorConfigParser.cpp  ScrollingBackgroundConfigParser.cpp
textures/: textureMetadata.xml
